<resources>
    <string name="app_name">covid-19-tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_patient">Add Patient</string>
    <string name="mac_address">Mac Address</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="view_patients">View Patients</string>
    <string name="ap_ip_address">AP IP Address</string>
    <string name="port_number">Port Number</string>
    <string name="connect">Connect</string>
    <string name="check_covid_patients">Check Covid Patients</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_to_ap">Connect to AP</string>
    <string name="alert_received">Alert Received!</string>
    <string name="check_risk">Check Risk</string>
</resources>